--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="  max-w-7xl mx-auto   ">
         <div class="sm:flex items-center text-center py-5 ">
           <div id="blog-html" class=" ">
-              <a href="/index.html"  class="btn  text-xl bg-green-300 " >Blog</a>
+              <a href="./js/index.html"  class="btn  text-xl bg-green-300 " >Blog</a>
             </div>
             
             <div class="sm:flex-grow text-center">
               <ul class=" menu-horizontal px-1">
                 <li>
-                 <div class="flex items-center space-x-5">
+                 <div class="flex items-center space-x-3">
                     <img class="text-xl" src="images/logo.png" alt="">
                     <a class="text-2xl font-semibold">Donate Bangladesh</a>
                  </div>
@@ -47,10 +47,10 @@
 </div>
 
 <section class=" text-center max-w-7xl mx-auto px-4 mt-24">
-    <div class="space-x-3">
-      <button id="show-donate-btn" class="btn btn-outline btn-success">Donation</button>
+    <div id="active-button" class="space-x-3">
+      <button id="show-donate-btn" class="btn btn-outline  btn-success">Donation</button>
 
-      <button id="show-histore-btn" class="btn btn-outline btn-success">History</button>
+      <button id="show-histore-btn" class="btn btn-outline  btn-success">History</button>
   </div>
   </section>
   
