--- a/js/index.html
+++ b/js/index.html
@@ -15,16 +15,16 @@
           
           <div class="  bg-[#F9F7F3]">
             <div class="  max-w-7xl mx-auto   ">
-                <div class="sm:flex items-center text-center">
+                <div class="sm:flex items-center text-center py-2">
                   <div id="blog-html" class=" ">
-                      <a href="/index.html"  class="btn  text-xl bg-green-300 " >Blog</a>
+                      <a href="/index.html"  class=" btn  bg-green-300 " >Home</a>
                     </div>
                     <div class="sm:flex-grow text-center">
                       <ul class="menu menu-horizontal px-1">
                         <li>
-                         <div class="">
+                          <div class="flex items-center space-x-3">
                             <img class="text-xl" src="/images/logo.png" alt="">
-                            <a>Donate Bangladesh</a>
+                            <a class="text-2xl font-semibold">Donate Bangladesh</a>
                          </div>
                         </li>
                       </ul> 
