some code add for BDT

--- a/js/index.html
+++ b/js/index.html
@@ -70,50 +70,44 @@
 
                       <div class="collapse collapse-arrow border border-gray-400 rounded">
                         <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium">How to you on element form the Dom ?</div>
+                        <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?
+                        </div>
                         <div class="collapse-content">
-                          <p>DOM: Creating Elements<br>
-                            createElement() — create a new element.<br>
-                            setAttribute() — set any needed <br>attributes, such as ID's or classes.
-                            createTextNode() — create any needed content.<br>
-                            appendChild() — attach the new text node to the element.</p>
+                          <p>Using getElementById: The getElementById method allows you to <br>select an element by its ID. ...<br>
+                            Using getElementsByClassName: ...<br>
+                            Using getElementsByTagName: ...<br>
+                            Using querySelector: ...<br>
+                            Using querySelectorAll: ...<br>
+                            Changing the Text Content. ...<br>
+                            Changing the HTML Content. ...<br>
+                            Changing the Attribute Value.<br>
+                            </p>
                         </div>
                       </div>
 
 
                       <div class="collapse collapse-arrow border border-gray-400 rounded">
                         <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium">What is the object of a model?
+                        <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and why is it useful?
                         </div>
                         <div class="collapse-content">
-                          <p>A model object is a type of object that contains the data of an application, provides access to that data, and implements logic to manipulate the data.</p>
-                        </div>
-                      </div>
-
-
-                      <div class="collapse collapse-arrow border border-gray-400 rounded">
-                        <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium"> What is the difference between HTML and DOM?
-                        </div>
-                        <div class="collapse-content">
-                          <p>What is the difference between HTML and DOM? <br> In short, HTML represents the initial page content and the DOM (Document Object Model) represents the current content in a tree of object</p>
+                          <p>
+                            In English
+                            Event delegation refers to the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated. <br> It allows us to attach a single event listener for elements that exist now or in the future.</p>
                         </div>
                       </div>
 
 
                       
+
+
+                      
                       <div class="collapse collapse-arrow border border-gray-400 rounded">
                         <input type="radio" name="my-accordion-2" />
-                        <div class="collapse-title text-xl font-medium">How to access DOM element in JavaScript?
+                        <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles Using of The Dom ??
                         </div>
                         <div class="collapse-content">
-                          <p>Methods. There are five methods for accessing elements in a document. ...<br>
-                            Method One: getElementById() ...<br>
-                            Method Two: getElementByClassName() ...<br>
-                            Method Three: getElementsByTagName. ...<br>
-                            Method Four: querySelector() ...<br>
-                            Method Five: querySelectorAll() ...
-                            Conclusion.</p>
+                          <p>Changing an element's style (CSS) attributes is one of the ways in which the DOM can be used. For example, in the code below, the onfocus event handler method is used to change the element's style when the user clicks inside it. When this event occurs, the element's background color will change to purple.</p>
                         </div>
                       </div>
 
